# Homework

./: .coverage  .gitignore  Readme.md  pyproject.toml
htmlcov/: .coverage  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
