[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Serdiuk",email = "ytfrpkkpreim@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
strict = true
warn_unreachable = true
exclude = 'venv'


[tool.black]
line-length = 119
exclude = ".git"


[tool.isort]
line_length = 119
force_single_line = true